// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactMarkdown options should correctly return an anchor HTML element 1`] = `
<a
  href="https://testlink.mock"
  rel="noopener noreferrer"
  target="_blank"
>
  example link test for test
</a>
`;

exports[`ReactMarkdownWrapper component should be displayed correctly if source provided 1`] = `
<ReactMarkdown
  astPlugins={Array []}
  escapeHtml={true}
  parserOptions={Object {}}
  plugins={Array []}
  rawSourcePos={false}
  renderers={
    Object {
      "Link": [Function],
    }
  }
  skipHtml={false}
  source="**test** using \`markdown\`"
  sourcePos={false}
  transformLinkUri={[Function]}
/>
`;

exports[`ReactMarkdownWrapper component should be displayed correctly if source with link 1`] = `
<ReactMarkdown
  astPlugins={Array []}
  escapeHtml={true}
  parserOptions={Object {}}
  plugins={Array []}
  rawSourcePos={false}
  renderers={
    Object {
      "Link": [Function],
    }
  }
  skipHtml={false}
  source="**test** using [markdown](https://en.wikipedia.org/wiki/Markdown)"
  sourcePos={false}
  transformLinkUri={[Function]}
/>
`;
